21.10.06 validation null 체크 StringUtills로 변경